req bang diki: perubahan dashboard siswa, penghapusan halaman jadwal, riwayat absensi
